# suhan_robot_model_tools

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
examples/: dual_arm_fixed_with_conditions.py  dual_arm_with_conditions.py  generate_triple_arm_constraint_dataset.py  generate_triple_arm_constraint_dataset_var_coparam.py  panda_orientation.py  parallel_chain_test.py  planning_scene_to_vis_sim.py
src/: suhan_robot_model_tools.cpp  suhan_robot_model_tools.h  suhan_robot_model_tools_warpper.cpp
src/collision_checker/: planning_scene_collision_check.cpp  planning_scene_collision_check.h
src/constraints/: dual_chain_constraint_functions.cpp  dual_chain_constraint_functions.h  implicit_parallel_function.cpp  implicit_parallel_function.h  kinematics_constraint_functions.cpp  kinematics_constraint_functions.h  multi_chain_constraint_functions.cpp  multi_chain_constraint_functions.h  orientation_constraint_functions.cpp  orientation_constraint_functions.h  triple_chain_constraint_functions.cpp  triple_chain_constraint_functions.h
src/eigen_tools/: eigen_tools.cpp  eigen_tools.h  float_tools.h  suhan_benchmark.h
src/python/: __init__.py  assembly_display.py  panda_datagen.py  panda_display.py  panda_display_in_assembly_env.py  social_robot_collision_datagen.py  social_robot_datagen.py  social_robot_datagen_ver2.py  social_robot_dataset_verify.py  social_robot_display.py  social_robot_display_once.py  social_robot_display_projected.py  social_robot_display_raw.py  social_robot_gen.sh  social_robot_moveit_interface.py  social_robot_start_goal_gen.py  test.py
src/python/assembly/: assembly_datagen.py  panda_datagen.py
src/python/dual_panda_6d_exp/: dual_panda_generate_samples_6d.py
src/trac_ik_adapter/: trac_ik_adapter.cpp  trac_ik_adapter.h
src/visual_sim/: visual_sim.cpp  visual_sim.h
srmt/constraints/: __init__.py  constraints.py
srmt/kinematics/: __init__.py  trac_ik.py
srmt/planner/: __init__.py  abstact_planner.py  motion_tree.py  rrt_connect.py
srmt/planning_scene/: __init__.py  planning_scene.py  planning_scene_tools.py  visual_sim.py
srmt/utils/: __init__.py  cont_reader.py  ros_utils.py  transform_utils.py
